rotue for session

--- a/app/templates/backbone.html
+++ b/app/templates/backbone.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="static/js/backbone-min.js"></script>
         <script type="text/javascript" src="static/js/mustache.js"></script>
-        <script type="text/javascript" src="static/js/application.js"></script>
+        
     </head>
     <body>
     {% verbatim %}
