add ids to links

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         <script type="text/template" id="results">
             <h3>Select a theater</h3>
             {{#.}}
-                <h4><a href='#{{name}}' id="theater-link">{{name}}</a></h4>
+                <h4><a href='#{{name}}' id="{{id}}" class="theater-link">{{name}}</a></h4>
                 <button type="button" class="test">test!</button>
             {{/.}}
         </script>
