--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="static/js/underscore-min.js"></script>
         <script type="text/javascript" src="static/js/mustache.js"></script>
         <script type="text/javascript" src="static/js/application.js"></script>
     </head>
@@ -12,8 +13,6 @@
                 <h4><a href='#{{name}}' id="{{id}}" class="theater-link">{{name}}</a></h4>
             {{/.}}
         </script>
-    {% endverbatim %}
-    {% verbatim %}
         <script type="text/template" id="theater">
             <h3>Select movies</h3>
             <form>
@@ -22,6 +21,9 @@
             {{/movies}}
             <button type="button" id="select-movies">Go!</button>
             </form>
+        </script>
+        <script type="text/template" id="graph">
+            <canvas id="canvas" height="450" width="600"></canvas>
         </script>
     {% endverbatim %}
         <div id="container">
