--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,14 @@
             </form>
         </script>
         <script type="text/template" id="graph">
-            <canvas id="canvas" height="450" width="600"></canvas>
+            {{#.}}
+                <h4>{{name}}</h4>
+                <ul>
+                    {{#showtimes}}
+                        <li>{{.}}</li>
+                    {{/showtimes}}
+                </ul>
+            {{/.}}
         </script>
     {% endverbatim %}
         <div id="container">
