--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title> Movie Day</title>
+
         <script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="static/js/underscore-min.js"></script>
         <script type="text/javascript" src="static/js/mustache.js"></script>
