--- a/app/templates/bootstrap.html
+++ b/app/templates/bootstrap.html
@@ -1,15 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
     <script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="static/js/underscore-min.js"></script>
+    <script type="text/javascript" src="static/js/mustache.js"></script>
+    <script type="text/javascript" src="static/js/application.js"></script>
 </head>
 <body>
-    <div class="jumbotron">
-      <div class="container">
-        <h3>Testing</h3>
-      </div>
+    {% verbatim %}
+        <script type="text/template" id="results">
+            <h3>Select a theater</h3>
+            {{#.}}
+                <h4><a href='#{{name}}' id="{{id}}" class="theater-link">{{name}}</a></h4>
+            {{/.}}
+        </script>
+        <script type="text/template" id="theater">
+            <h3>Select movies</h3>
+            <form>
+            {{#movies}}
+                <input type="checkbox" id='{{id}}' class="movie-checkbox">{{name}}<br>
+            {{/movies}}
+            <button type="button" id="select-movies">Go!</button>
+            </form>
+        </script>
+        <script type="text/template" id="graph">
+            {{#.}}
+                <h4>{{name}}</h4>
+                <ul>
+                    {{#showtimes}}
+                        <li>{{.}}</li>
+                    {{/showtimes}}
+                </ul>
+            {{/.}}
+        </script>
+    {% endverbatim %}
+    <div class="content">
+        <div class="container">
+            <div class="jumbotron text-center">
+                <h1>Welcome to Movie Day!</h1>
+                <p>Movie day helps you plan your day at the movies. Simply choose which movies you want to see, and we'll tell you the most efficient way to watch them.</p>
+                <div class="row">
+                    <div class="col-lg-4 col-lg-offset-4">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id ="zip" placeholder="Enter zip code"/> 
+                            <span class="input-group-btn">
+                                <button class="btn btn-info" id ="search" type="button">Go!</button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Pick theater</h3>
+                    <p>This is a test paragraph. Talk about how to input zip code and choose theater.</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Choose Movies</h3>
+                    <p>This is a test paragraph. Talk about how to select the movies you want.</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Watch</h3>
+                    <p>This is a test paragraph. Talk about how we show users the results.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
