--- a/app/templates/bootstrap.html
+++ b/app/templates/bootstrap.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css">
     <script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="static/js/underscore-min.js"></script>
     <script type="text/javascript" src="static/js/mustache.js"></script>
-    <script type="text/javascript" src="static/js/application.js"></script>
+    <script type="text/javascript" src="static/js/application-bootstrap.js"></script>
+
+    <title>Movie Day</title>
 </head>
 <body>
     {% verbatim %}
         <script type="text/template" id="results">
-            <h3>Select a theater</h3>
-            {{#.}}
-                <h4><a href='#{{name}}' id="{{id}}" class="theater-link">{{name}}</a></h4>
-            {{/.}}
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-lg-offset-4">
+                        <h3>Select a theater</h3>
+                        {{#.}}
+                            <h4><a href='#{{name}}' id="{{id}}" class="theater-link">{{name}}</a></h4>
+                        {{/.}}
+                    </div>
+                </div>
+            </div>
         </script>
         <script type="text/template" id="theater">
             <h3>Select movies</h3>
@@ -36,7 +45,18 @@
             {{/.}}
         </script>
     {% endverbatim %}
-    <div class="content">
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Home</a>
+        </div>
+    </nav>
+    <div id="content">
         <div class="container">
             <div class="jumbotron text-center">
                 <h1>Welcome to Movie Day!</h1>
@@ -57,11 +77,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <h3>Pick theater</h3>
-                    <p>This is a test paragraph. Talk about how to input zip code and choose theater.</p>
+                    <p>Enter your zip code above to find theaters in your area. Choose which theater you would like to go to.</p>
                 </div>
                 <div class="col-md-4">
-                    <h3>Choose Movies</h3>
-                    <p>This is a test paragraph. Talk about how to select the movies you want.</p>
+                    <h3>Select Movies</h3>
+                    <p>Select all the movies you want to see and let us do the rest.</p>
                 </div>
                 <div class="col-md-4">
                     <h3>Watch</h3>
