--- a/app/templates/bootstrap.html
+++ b/app/templates/bootstrap.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-lg-offset-4">
-                        <h3>Select a theater</h3>
+                        <h3 class="text-center">Select a theater</h3>
                         {{#.}}
                             <h4><a href='#{{name}}' id="{{id}}" class="theater-link">{{name}}</a></h4>
                         {{/.}}
@@ -86,6 +86,14 @@
                 <div class="col-md-4">
                     <h3>Watch</h3>
                     <p>This is a test paragraph. Talk about how we show users the results.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <h3 class="text-center">In Theaters</h3>
+            <div class="row">
+                <div class="intheaters">
+
                 </div>
             </div>
         </div>
