--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,6 +33,16 @@
             <button type="button" id="select-movies">Go!</button>
             </form>
         </script>
+        <script type="text/template" id="theater-new">
+            <div class="container">
+                <h3 class="text-center">Select Two Movies</h3>
+                <div class="row">
+                    <div class="intheaters">
+
+                    </div>
+                </div>
+            </div>
+        </script>
         <script type="text/template" id="graph">
             {{#.}}
                 <h4>{{name}}</h4>
