--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,11 +9,216 @@
     z-index: 2;
 }
 
+/* Start using movie finder */
+
+.tiles {
+    width:80%;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:12px;
+}
+
+.tile {
+    display: inline-block;
+    cursor: default;
+    border: 1px solid #BBBBBB;
+    background-color: white;
+    font-size: 13px;
+    width: 150px;
+    height: 150px;
+    margin: 12px;
+    border-radius: 3px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+.tile:hover {
+    box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.4);
+    cursor:pointer;
+}
+
+.tile .content {
+    height:130px;
+    width:100%;
+    border-top-left-radius:2px;
+    border-top-right-radius:2px;
+}
+
+.tile .content .pic {
+    position:absolute;
+    height:130px;
+    width:150px;
+    opacity:0.8;
+    background-size: cover;
+    border-top-left-radius:2px;
+    border-top-right-radius:2px;
+    box-shadow: 0px 10px 20px 1px rgba(0, 0, 0, 0.3) inset;  /* Light shadow: */
+}
+
+.tile:hover .content .pic{
+    opacity: 1.0;
+}
+
+.tile .title {
+    height: 20px;
+    white-space: nowrap;
+    text-align: center;
+    padding:3px;
+    color: #444444;
+    overflow: hidden;
+    border-bottom-left-radius:3px;
+    border-bottom-right-radius:3px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.tile:hover .title {
+    color: black;
+}
+
+a.tile, a.tile:hover { text-decoration: none; }
+
+
+#movies  { text-align: center; }
+
+
+#header #searchfield { font-family: 'Oleo Script', cursive; }
+#header ul { float: left; display:inline-block; margin:0; padding:4px; margin-left:40px; }
+#navigation li {
+    color:white;
+    text-shadow: 0px -2px 0px rgba(0,0,0,0.25); 
+    display: inline-block;
+    height:20px;
+    list-style-type: none;
+    line-height:20px;
+    padding:4px;
+    border-radius: 4px;
+    margin:6px;
+    cursor:pointer;
+}
+#navigation li.selected, #navigation li:hover  {
+    background-color: #F8F8F8;
+    color: black;
+    text-shadow: none;
+}
+#navigation #search.selected, #navigation #search:hover { background-color:transparent; }
+#navigation li, #navigation #searchfield { font-size: 16px; font-family: 'Oleo Script', cursive; }
+#navigation #searchfield { margin: 0; width: 300px;}
+
 /* Tile overrides */
 .tile {
     width: 120px;
     height: 200px;
     margin: 12px;
     margin-bottom:6px;
-    position:relative; /*Fixes opacity in ie*/
+    position:relative; 
 }
+.tile:hover {
+    opacity: 1!important;
+}
+.tile .banner {
+    float: right;
+    margin-top: -10px;
+    margin-right: -10px;
+    padding: 8px;
+    background-color: rgba(0,0,0,0.8);
+    border-radius: 50px;
+    font-size: 20px;
+    color: white;
+    font-family: verdana, San-Serif;
+}
+.tile .content .pic {
+    height:180px;
+    width:120px;
+    box-shadow: none;  /*Speeds things up a bit*/
+    opacity:0.85;
+}
+
+.tile, .tile .content, .tile .content .pic { border-radius:2px; }
+.tile, .tile .title, .tile:hover { background-color: transparent; box-shadow: none;  border:0px;}
+.tile .content {
+    height:180px;
+    border: 0px;
+    box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.4);
+}
+.tile:hover .content {
+    box-shadow: 0px 5px 7px 4px rgba(0, 0, 0, 0.5);
+}
+
+
+/* Lightbox styles*/
+#lightbox-inner .leftColumn {
+    float:left;
+}
+#lightbox-inner .rightColumn {
+    margin-left:136px;
+}
+#lightbox-inner .thumbnail{
+    height:180px;
+    width:120px;
+    margin:10px;
+    margin-top:3px;
+    margin-right:0px;  /*This is provided by the paragraph element*/
+    padding:0px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+    border-radius:3px;
+    border:3px solid white;
+    position:relative;
+    top:-42px;
+}
+#lightbox-inner p, #lightbox-inner h1{
+    margin:0px;
+    padding:10px;
+}
+#lightbox-inner h1 {
+    padding-left:146px;
+    margin-top:4px;
+    color: #444444;
+    
+    font-family: 'Oxygen', sans-serif;
+    font-size: 20px;
+    font-weight:300;
+}
+#lightbox-inner .review {
+    padding:10px;
+    border-bottom:1px solid rgba(0,0,0,0.2);
+    box-shadow:0px 1px 1px -1px rgba(255,255,255,1);
+    border-top:1px solid rgba(0,0,0,0.2);
+    background: rgba(255,255,255,0.6) url('/resources/images/quote2.png') no-repeat 98% 90%;
+    font-family: 'Lora', serif;
+}
+#lightbox-inner .review img {padding-right:4px;}
+
+#lightbox-inner {
+    background-color: #F0F0F0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#F0F0F0', EndColorStr='#C0C0C0')"; /* IE8 */
+    background: -moz-linear-gradient(top, #F0F0F0 0%, #C0C0C0 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F0F0F0), color-stop(100%,#C0C0C0));
+    background: -webkit-linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
+    background: -o-linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
+    background: -ms-linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
+    background: linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
+}
+
+
+/* Container for scroll detection */
+#loadmore {
+    width: 100%;
+    text-align: center;
+    height: 80px;
+}
+
+
+/* iPhone styles*/
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+    #navigation li {
+        display:block;
+    }
+    #navigation, #navigation li {
+        margin:0px;
+        margin-left:-40px;
+        padding:6px;
+    }
+}
+
