--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,16 +9,6 @@
     z-index: 2;
 }
 
-/* Start using movie finder */
-
-.tiles {
-    width:80%;
-    text-align: center;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top:12px;
-}
-
 .tile {
     display: inline-block;
     cursor: default;
@@ -78,31 +68,10 @@
 a.tile, a.tile:hover { text-decoration: none; }
 
 
-#movies  { text-align: center; }
-
-
-#header #searchfield { font-family: 'Oleo Script', cursive; }
-#header ul { float: left; display:inline-block; margin:0; padding:4px; margin-left:40px; }
-#navigation li {
-    color:white;
-    text-shadow: 0px -2px 0px rgba(0,0,0,0.25); 
-    display: inline-block;
-    height:20px;
-    list-style-type: none;
-    line-height:20px;
-    padding:4px;
-    border-radius: 4px;
-    margin:6px;
-    cursor:pointer;
+#movies  { 
+    text-align: center; 
 }
-#navigation li.selected, #navigation li:hover  {
-    background-color: #F8F8F8;
-    color: black;
-    text-shadow: none;
-}
-#navigation #search.selected, #navigation #search:hover { background-color:transparent; }
-#navigation li, #navigation #searchfield { font-size: 16px; font-family: 'Oleo Script', cursive; }
-#navigation #searchfield { margin: 0; width: 300px;}
+
 
 /* Tile overrides */
 .tile {
@@ -133,92 +102,23 @@ a.tile, a.tile:hover { text-decoration: none; }
     opacity:0.85;
 }
 
-.tile, .tile .content, .tile .content .pic { border-radius:2px; }
-.tile, .tile .title, .tile:hover { background-color: transparent; box-shadow: none;  border:0px;}
+.tile, .tile .content, .tile .content .pic { 
+    border-radius:2px; 
+}
+
+.tile, .tile .title, .tile:hover { 
+    background-color: transparent; 
+    box-shadow: none;  
+    border:0px;
+}
+
 .tile .content {
     height:180px;
     border: 0px;
     box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.4);
 }
+
 .tile:hover .content {
     box-shadow: 0px 5px 7px 4px rgba(0, 0, 0, 0.5);
-}
-
-
-/* Lightbox styles*/
-#lightbox-inner .leftColumn {
-    float:left;
-}
-#lightbox-inner .rightColumn {
-    margin-left:136px;
-}
-#lightbox-inner .thumbnail{
-    height:180px;
-    width:120px;
-    margin:10px;
-    margin-top:3px;
-    margin-right:0px;  /*This is provided by the paragraph element*/
-    padding:0px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
-    border-radius:3px;
-    border:3px solid white;
-    position:relative;
-    top:-42px;
-}
-#lightbox-inner p, #lightbox-inner h1{
-    margin:0px;
-    padding:10px;
-}
-#lightbox-inner h1 {
-    padding-left:146px;
-    margin-top:4px;
-    color: #444444;
-    
-    font-family: 'Oxygen', sans-serif;
-    font-size: 20px;
-    font-weight:300;
-}
-#lightbox-inner .review {
-    padding:10px;
-    border-bottom:1px solid rgba(0,0,0,0.2);
-    box-shadow:0px 1px 1px -1px rgba(255,255,255,1);
-    border-top:1px solid rgba(0,0,0,0.2);
-    background: rgba(255,255,255,0.6) url('/resources/images/quote2.png') no-repeat 98% 90%;
-    font-family: 'Lora', serif;
-}
-#lightbox-inner .review img {padding-right:4px;}
-
-#lightbox-inner {
-    background-color: #F0F0F0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#F0F0F0', EndColorStr='#C0C0C0')"; /* IE8 */
-    background: -moz-linear-gradient(top, #F0F0F0 0%, #C0C0C0 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#F0F0F0), color-stop(100%,#C0C0C0));
-    background: -webkit-linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
-    background: -o-linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
-    background: -ms-linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
-    background: linear-gradient(top, #F0F0F0 0%,#C0C0C0 100%);
-}
-
-
-/* Container for scroll detection */
-#loadmore {
-    width: 100%;
-    text-align: center;
-    height: 80px;
-}
-
-
-/* iPhone styles*/
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-    #navigation li {
-        display:block;
-    }
-    #navigation, #navigation li {
-        margin:0px;
-        margin-left:-40px;
-        padding:6px;
-    }
 }
 
