--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,14 +15,31 @@
         <script type="text/template" id="intheaters_template">
             <h3 class="text-center">Currently In Theaters</h3>
             {{#.}}
-            <a class="tile" href="#">
-                <div class="content">
+            <div class="tile" href="#">
+                <div class="content" data-toggle="modal" data-target="#myModal">
                     <div class="pic" style="background-image:url('{{posters.profile}}')">
                         <span class="banner">{{ratings.critics_score}}</span>
                     </div>
+                    
                 </div>
                 <div class="title">{{title}}</div>
-            </a>
+            </div>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">{{title}}</h4>
+                  </div>
+                  <div class="modal-body">
+                    {{synopsis}}
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             {{/.}}
         </script>
         <script type="text/template" id="results">
@@ -114,6 +131,7 @@
         <section id="movies" style="display:block">
 
         </section>
+
     </div>
 </body>
 </html>
