--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
             <h3 class="text-center">Currently In Theaters</h3>
             {{#.}}
             <div class="tile" href="#">
-                <div class="content" data-toggle="modal" data-target="#myModal">
+                <div class="content" data-toggle="modal" data-target="#{{id}}">
                     <div class="pic" style="background-image:url('{{posters.profile}}')">
                         <span class="banner">{{ratings.critics_score}}</span>
                     </div>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="title">{{title}}</div>
             </div>
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal fade" id="{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -81,6 +81,36 @@
                         <li>{{.}}</li>
                     {{/showtimes}}
                 </ul>
+            {{/.}}
+        </script>
+        <script type="text/template" id="results_template">
+            <h3 class="text-center">Results</h3>
+            {{#.}}
+            <div class="tile" href="#">
+                <div class="content" data-toggle="modal" data-target="#{{id}}">
+                    <div class="pic" style="background-image:url('{{poster}}')">
+                        <span class="banner">{{score}}</span>
+                    </div>
+                    
+                </div>
+                <div class="title">{{name}}</div>
+            </div>
+            <div class="modal fade" id="{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">{{name}}</h4>
+                  </div>
+                  <div class="modal-body">
+                    {{synopsis}}
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
             {{/.}}
         </script>
     {% endverbatim %}
