added watch button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,6 +94,7 @@
                     
                 </div>
                 <div class="title">{{name}}</div>
+                <button type="button" class="btn btn-success btn-xs text">Watch</button>
             </div>
             <div class="modal fade" id="{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
@@ -161,7 +162,6 @@
         <section id="movies" style="display:block">
 
         </section>
-
     </div>
 </body>
 </html>
