--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,7 +91,18 @@
             </div>
             {{/.}}
         </script>
+        <script type="text/template" id="results_template">
+            {{#.}}
+                <h4>{{name}}</h4>
+                <ul>
+                    {{#showtimes}}
+                    <li>{{.}}</li>
+                    {{/showtimes}}
+                </ul>
+            {{/.}}
+        </script>
     {% endverbatim %}
+
 <nav class="navbar navbar-inverse" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
