--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -120,7 +120,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
         <span class="glyphicon glyphicon-home"></span> 
     </a>
   </div>
