--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -106,7 +106,7 @@
             {{#.}}
                 <p>{{first_name}}</p>
                 <p>followed by</p>
-                <p>{{.second_name}}</p>
+                <p>{{second_name}}</p>
             {{/.}}
         </script>
     {% endverbatim %}
