--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,7 +126,7 @@
   </div>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><a href="#">Link</a></li>
+      <li><a id="goto-theaters" href="#">Theaters</a></li>
       <li><a href="#">Link</a></li>
     </ul>
   </div>
