navbar "movies" link take you back to movie selection

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -130,7 +130,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li><a id="goto-theaters" href="#">Theaters</a></li>
-      <li><a href="#">Link</a></li>
+      <li><a id="goto-movies" href="#">Movies</a></li>
     </ul>
   </div>
 </nav>
