--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -115,3 +115,4 @@ a.tile, a.tile:hover { text-decoration: none; }
     box-shadow: 0px 5px 7px 4px rgba(0, 0, 0, 0.5);
 }
 
+.open ul li:hover {cursor: pointer; background-color: #EEE;}
