--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                  <button id="chosen-date" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                     Today <span class="caret"></span>
                   </button>
                   <ul id="day" class="dropdown-menu" role="menu">
@@ -166,7 +166,7 @@
                   </ul>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                  <button id="chosen-time" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                     Now <span class="caret"></span>
                   </button>
                   <ul id="time" class="dropdown-menu" role="menu">
