--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -178,14 +178,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h3>Pick theater</h3>
-                    <p>Enter your zip code above to find theaters in your area. Choose which theater you would like to go to.</p>
+                    <div class="text-center">
+                        <p class="glyphicon glyphicon-search"></p>
+                    </div>
+                    <h3>Search for theater</h3>
+                    <p>Enter your zip code above to search for theaters in your area. You can also specify when you want to go by choosing the date and time.</p>
                 </div>
                 <div class="col-md-4">
+                    <div class="text-center">
+                        <span class="glyphicon glyphicon-hand-up"></span>
+                    </div>
                     <h3>Select Movies</h3>
-                    <p>Select all the movies you want to see and let us do the rest.</p>
+                    <p>Select at least two movies you want to see. You can click on each movie to get more information about the movie. We'll tell you the most time efficient way to watch two movies.</p>
                 </div>
                 <div class="col-md-4">
+                    <div class="text-center">
+                        <span class="glyphicon glyphicon-eye-open"></span>
+                    </div>
                     <h3>Watch</h3>
                     <p>This is a test paragraph. Talk about how we show users the results.</p>
                 </div>
