--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -123,3 +123,32 @@ a.tile, a.tile:hover { text-decoration: none; }
 .col-md-4 .glyphicon {
     font-size: 70px;
 }
+
+#jumbotron-wrapper {
+    margin-bottom: 50px;
+    padding: 50px 0px;
+}
+
+#jumbotron-wrapper .jumbotron h1, .jumbotron p {
+    color: white;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000; 
+}
+
+#steps-wrapper {
+    margin-bottom: 50px;
+}
+
+body .navbar {
+    margin-bottom: 0px;
+}
+
+.divider {
+  background: url('../images/divider.jpg');
+  width: 100%;
+  height: 1px;
+  margin: 15px 0px 60px 0px;
+}
