--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -7,6 +7,10 @@ src: url('static/fonts/glyphicons-halflings-regular.svg'),
      url('static/fonts/glyphicons-halflings-regular.woff')
 }
 
+body {
+    -webkit-font-smoothing: antialiased;
+}
+
 
 .tile {
     display: inline-block;
@@ -59,7 +63,7 @@ src: url('static/fonts/glyphicons-halflings-regular.svg'),
 }
 
 .tile:hover .title {
-    color: black;
+    color: yellow;
 }
 
 a.tile, a.tile:hover { text-decoration: none; }
@@ -102,6 +106,7 @@ a.tile, a.tile:hover { text-decoration: none; }
     background-color: transparent; 
     box-shadow: none;  
     border:0px;
+    color: white;
 }
 
 .tile .content {
@@ -129,13 +134,14 @@ a.tile, a.tile:hover { text-decoration: none; }
     padding: 50px 0px;
 }
 
-#jumbotron-wrapper .jumbotron h1, .jumbotron p {
+#jumbotron-wrapper .jumbotron h1, .jumbotron p, #intheaters-wrapper #movies h1, #jumbotron-wrapper .jumbotron h2, #jumbotron-wrapper .jumbotron p a, #theater-results h2 {
+    font-family: 'Montserrat', sans-serif;
     color: white;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000; 
+    text-shadow: 0 0 10px rgba(0,0,0,.5);
+}
+
+#jumbotron-wrapper .jumbotron h2 {
+    padding-bottom: 20px;
 }
 
 #steps-wrapper {
@@ -151,4 +157,23 @@ body .navbar {
   width: 100%;
   height: 1px;
   margin: 15px 0px 60px 0px;
+}
+
+.col-md-4 p {
+    color: #888;
+    font-family: 'Roboto', sans-serif;
+}
+
+#intheaters-wrapper {
+    background-image: url('../images/182.jpg');
+    background-position:center; 
+}
+
+#jumbotron-wrapper, #theater-results {
+    background-image:url('http://i.imgur.com/fkBIlX1.jpg');
+    /*background-image: url('../images/bridge2.jpg');*/
+}
+
+#intheaters-wrapper #movies h1 {
+    padding: 40px;
 }
