--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -111,7 +111,7 @@
                 <div class="tile" href="#">
                     <div class="content">
                         <div class="pic" style="background-image:url('{{first_poster}}')">
-                            <span class="banner">42</span>
+                            <span class="banner">{{first_score}}</span>
                         </div>
                     </div>
                     <div class="title">{{first_name}}</div>
@@ -119,7 +119,7 @@
                 <div class="tile" href="#">
                     <div class="content">
                         <div class="pic" style="background-image:url('{{second_poster}}')">
-                            <span class="banner">42</span>
+                            <span class="banner">{{second_score}}</span>
                         </div>
                     </div>
                     <div class="title">{{second_name}}</div>
